<resources>
    <string name="app_name">Landlord Аpp</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="email_register">Email Address</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="sign_up_button">Create Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_landlord">Landlord</string>
    <string name="radio_tenant">Tenant</string>
    <string name="new_property_header">Add new property to your list</string>
    <string name="new_property_button">Add Property</string>
    <string name="new_property_price">Set Price</string>
    <string name="new_property_name">Property Name</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_signUp_button">Sign Up</string>
    <string name="login_header">Login</string>
    <string name="new_property_address">Address</string>
    <string name="send_chat_btn">Send</string>
    <string name="chat_room_btn">Chat Room</string>
    <string name="delete_property_btn">Delete Property</string>
    <string name="change_tenant_btn">Change Tenant</string>
    <string name="tenant_email">Tenant Email</string>
</resources>
