<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singup.RegisterFormFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_up_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/sign_up_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_header"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_below="@id/sign_up_error"
            android:id="@+id/sign_up_first_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_register" />

        <EditText
            android:layout_below="@+id/sign_up_first_name_label"
            android:id="@+id/sign_up_first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/sign_up_first_name_field"
            android:id="@+id/sign_up_last_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_register" />

        <EditText
            android:layout_below="@+id/sign_up_last_name_label"
            android:id="@+id/sign_up_last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/sign_up_last_name_field"
            android:id="@+id/sign_up_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_register" />

        <EditText
            android:layout_below="@+id/sign_up_email_label"
            android:id="@+id/sign_up_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/sign_up_email_field"
            android:id="@+id/sign_up_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_register" />

        <EditText
            android:layout_below="@+id/sign_up_password_label"
            android:id="@+id/sign_up_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@+id/sign_up_password_field"
            android:id="@+id/sign_up_confirm_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_register" />

        <EditText
            android:layout_below="@+id/sign_up_confirm_password_label"
            android:id="@+id/sign_up_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/sign_up_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/sign_up_confirm_password_field">
            <RadioButton
                android:text="@string/radio_landlord"
                android:id="@+id/radio_landlord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:text="@string/radio_tenant"
                android:id="@+id/radio_tenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <Button
            android:layout_below="@+id/sign_up_radio_group"
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"/>
    </RelativeLayout>
</FrameLayout>