<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginFragment">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginBackground">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/login_email_hint"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/btn_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/login_button" />

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/btn_signUp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/login_signUp_button" />

    </RelativeLayout>

</FrameLayout>